# soksak-sidecar-terminal-ghostty

./: Cargo.toml  README.md  THIRD-PARTY-NOTICES  build.rs  stage.sh
.github/workflows/: release.yml
release/: unit.json
scripts/: gate.sh
scripts/e2e/: ptyd-integration.sh
src/: checkpoint.rs  daemon.rs  engine.rs  lib.rs  main.rs  mirror.rs  proto.rs
tests/: bench.rs  ptyd_integration.rs  service_down.rs
tests/common/: mod.rs
