# soksak-sidecar-terminal-ghostty — terminal-domain sidecar (ghostty VT engine).
# An engine unit for the contract soksak-spec-sidecar-terminal (canonical text in
# the soksak-contract-terminal repo's SPEC.md). The core does not link this
# crate: it consumes the daemon's documented wire (soksak-pty-proto framing,
# reimplemented here) and serves terminal plugins over a rendezvous socket. The
# engine name lives in this unit's name only; the contract is engine-neutral.
[package]
name = "soksak-sidecar-terminal-ghostty"
version = "0.0.3"
edition = "2021"
publish = false
description = "Terminal-domain restore sidecar on the ghostty VT engine: mirrors PTY session output into screen state (scrollback, alt-screen, private modes), serializes it into replayable paint for warm/cold restore, and checkpoints sealed plaintext through the core PTY daemon."
build = "build.rs"

[lib]
name = "soksak_sidecar_terminal_ghostty"
path = "src/lib.rs"

# The survival service — subscribes to the daemon tees, checkpoints the mirrors, and
# serves restore over the identity-home rendezvous socket. resolve_sidecar_cmd stages
# dist/soksak-sidecar-terminal-ghostty (stage.sh).
[[bin]]
name = "soksak-sidecar-terminal-ghostty"
path = "src/main.rs"

# Restore engine — libghostty-vt (the VT model: parser, grid, scrollback, modes), the
# sole engine seat behind the engine module. It is a C library, so it is linked (build.rs)
# rather than declared here: the seat calls its C ABI directly. The engine can answer
# queries, so the seat installs count-then-drop callbacks (write_pty, device_attributes)
# to keep the mirror silent while still observing what it swallowed. MIT, © Mitchell
# Hashimoto and Ghostty contributors; the attribution ships in THIRD-PARTY-NOTICES.
# Build requirements (zig version, pinned commit) are in the README.

[dependencies]
# Wire — the daemon speaks NDJSON + base64 payloads; this unit reimplements the
# documented shape (proto module) rather than linking the core crate.
serde_json = "1"
base64 = "0.22"
# Cross-platform local-socket IPC — the rendezvous socket this unit serves and the
# daemon control/stream sockets it consumes. interprocess dispatches to Unix domain
# sockets on Unix and named pipes on Windows behind one API, inserting no framing of its
# own, so the NDJSON + length-prefixed tee protocol is byte-for-byte unchanged.
interprocess = "2"

# Redirect the survival service's own stderr to a home log so checkpoint failures are
# visible (the plugin spawns it over a stdio Channel that drops stderr). The redirect is
# a platform-specific syscall: dup2 on Unix, SetStdHandle on Windows.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }

[dev-dependencies]
# The contract and its acceptance suite: the corpus, the declared goldens, and the assertions.
# It has no engine of its own — the standard is the declared screen state, not what any
# implementation does. Dev-only: nothing from it ships.
soksak-contract-terminal = { git = "https://github.com/soksak-ai/soksak-contract-terminal.git", rev = "3eb8debde6ba273b37f3d0f141e9deb074b0fadc" }

# Independent workspace — separate from the core (src-tauri) workspace (a member must
# live under its workspace root, so a sibling directory cannot join core's).
[workspace]
